[FIX] web: date picker today on last row create a scrollbar
THis commit fixes the style of the date picker when the today day on the
last row as before its creates an overflow and so a scrollbar too.

task-4607085

closes odoo/odoo#200134

--- a/addons/web/static/src/core/datetime/datetime_picker.scss
+++ b/addons/web/static/src/core/datetime/datetime_picker.scss
@@ -67,19 +67,7 @@
     }
 
     .o_today span {
-        position: relative;
-
-        &::after {
-            content: "";
-            position: absolute;
-            left: 50%;
-            bottom: $spacer * -0.25;
-            transform: translateX(-50%);
-            width: 0.95em;
-            height: 0.2em;
-            border-radius: $border-radius-pill;
-            background: $danger;
-        }
+        border-bottom: 0.2em solid $danger;
     }
 
     // Grids
