--- a/addons/web/static/src/views/calendar/calendar_controller.scss
+++ b/addons/web/static/src/views/calendar/calendar_controller.scss
@@ -49,10 +49,7 @@ $o-cw-filter-avatar-size: 20px;
         width: 230px;
 
         .o_datetime_picker {
-            --DateTimePicker__Cell-size-md: 1.8rem;
-            @include media-breakpoint-up(xl){
-                --DateTimePicker__Cell-size-md: 1.5rem;
-            }
+            --DateTimePicker__Cell-size-md: 1.5rem;
             padding-right: 0 !important;
             padding-left: 0 !important;
 
